// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<div
  className="css-e2wgdg"
>
  <div
    className="css-1kqepsy"
  >
    <Brand />
    <Navigation
      height={100}
    />
  </div>
</div>
`;

exports[`should render children 1`] = `
<div
  className="css-e2wgdg"
>
  <div
    className="css-1kqepsy"
  >
    <Brand />
    <Navigation
      height={100}
    />
  </div>
  <Child />
</div>
`;
